Added references for Gradient Descent with MSE algorithm

--- a/Gradient Descent with MSE.ipynb
+++ b/Gradient Descent with MSE.ipynb
@@ -178,6 +178,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "- [Gradient Descent From Scratch](https://towardsdatascience.com/gradient-descent-from-scratch-e8b75fa986cc)\n",
+    "- [Machine Learning Tutorial Python - 4: Gradient Descent and Cost Function](https://www.youtube.com/watch?v=vsWrXfO3wWw&ab_channel=codebasics)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
