--- a/Machine Learning/Support Vector Machine (SVM).ipynb
+++ b/Machine Learning/Support Vector Machine (SVM).ipynb
@@ -27,8 +27,8 @@
     "$$\n",
     "l =\n",
     "  \\begin{cases}\n",
-    "       0 & \\text{if $y \\cdot f(x) \\geq 1$} \\\\\n",
-    "       1 - y \\cdot f(x) & \\text{otherwise}\n",
+    "       0 & y \\cdot f(x) \\geq 1 \\\\\n",
+    "       1 - y \\cdot f(x) & otherwise\n",
     "  \\end{cases}\n",
     "$$\n",
     "\n",
@@ -39,8 +39,8 @@
     "$$\n",
     "J_i =\n",
     "  \\begin{cases}\n",
-    "       \\lambda \\left \\| w \\right \\|^2 & \\text{if $y_i \\cdot f(x) \\geq 1$} \\\\\n",
-    "       \\lambda \\left \\| w \\right \\|^2 + 1 - y_i(w \\cdot x_i - b) & \\text{otherwise}\n",
+    "       \\lambda \\left \\| w \\right \\|^2 & y_i \\cdot f(x) \\geq 1 \\\\\n",
+    "       \\lambda \\left \\| w \\right \\|^2 + 1 - y_i(w \\cdot x_i - b) & otherwise\n",
     "  \\end{cases}\n",
     "$$\n",
     "\n",
@@ -49,16 +49,16 @@
     "$$\n",
     "\\frac{dJ_i}{dw_k} =\n",
     "  \\begin{cases}\n",
-    "       2 \\lambda w_k & \\text{if $y_i \\cdot f(x) \\geq 1$} \\\\\n",
-    "       2 \\lambda w_k - y_i \\cdot x_i & \\text{otherwise}\n",
+    "       2 \\lambda w_k & y_i \\cdot f(x) \\geq 1 \\\\\n",
+    "       2 \\lambda w_k - y_i \\cdot x_i & otherwise\n",
     "  \\end{cases}\n",
     "$$\n",
     "\n",
     "$$\n",
     "\\frac{dJ_i}{db} =\n",
     "  \\begin{cases}\n",
-    "       0 & \\text{if $y_i \\cdot f(x) \\geq 1$} \\\\\n",
-    "       y_i & \\text{otherwise}\n",
+    "       0 & y_i \\cdot f(x) \\geq 1 \\\\\n",
+    "       y_i & otherwise\n",
     "  \\end{cases}\n",
     "$$\n",
     "\n",
