--- a/Machine Learning/Support Vector Machine (SVM).ipynb
+++ b/Machine Learning/Support Vector Machine (SVM).ipynb
@@ -12,11 +12,7 @@
     "\n",
     "$$w \\cdot x - b = 0$$\n",
     "\n",
-    "$$\\begin{matrix}\n",
-    "w \\cdot x_i - b \\geq 1~~if~y_i = 1\n",
-    "\\\\ \n",
-    "w \\cdot x_i - b \\leq -1~~if~y_i = -1\n",
-    "\\end{matrix}$$\n",
+    "$$\\begin{matrix} w \\cdot x_i - b \\geq 1~~if~y_i = 1 \\\\ w \\cdot x_i - b \\leq -1~~if~y_i = -1 \\end{matrix}$$\n",
     "\n",
     "$$y_i(w \\cdot x_i - b) \\geq 1$$\n",
     "\n",
@@ -24,43 +20,19 @@
     "\n",
     "$$l = max(0, y_i(w \\cdot x_i - b))$$\n",
     "\n",
-    "$$\n",
-    "l =\n",
-    "  \\begin{cases}\n",
-    "       0 & y \\cdot f(x) \\geq 1 \\\\\n",
-    "       1 - y \\cdot f(x) & otherwise\n",
-    "  \\end{cases}\n",
-    "$$\n",
+    "$$l = \\begin{cases} 0 & y \\cdot f(x) \\geq 1 \\\\ 1 - y \\cdot f(x) & otherwise \\end{cases}$$\n",
     "\n",
     "#### Regularization\n",
     "\n",
     "$$J = \\lambda \\left \\| w \\right \\|^2 + \\frac{1}{n}\\sum_{i=1}^{n} max(0, y_i(w \\cdot x_i - b))$$\n",
     "\n",
-    "$$\n",
-    "J_i =\n",
-    "  \\begin{cases}\n",
-    "       \\lambda \\left \\| w \\right \\|^2 & y_i \\cdot f(x) \\geq 1 \\\\\n",
-    "       \\lambda \\left \\| w \\right \\|^2 + 1 - y_i(w \\cdot x_i - b) & otherwise\n",
-    "  \\end{cases}\n",
-    "$$\n",
+    "$$J_i = \\begin{cases} \\lambda \\left \\| w \\right \\|^2 & y_i \\cdot f(x) \\geq 1 \\\\ \\lambda \\left \\| w \\right \\|^2 + 1 - y_i(w \\cdot x_i - b) & otherwise \\end{cases}$$\n",
     "\n",
     "#### Gradients\n",
     "\n",
-    "$$\n",
-    "\\frac{dJ_i}{dw_k} =\n",
-    "  \\begin{cases}\n",
-    "       2 \\lambda w_k & y_i \\cdot f(x) \\geq 1 \\\\\n",
-    "       2 \\lambda w_k - y_i \\cdot x_i & otherwise\n",
-    "  \\end{cases}\n",
-    "$$\n",
+    "$$\\frac{dJ_i}{dw_k} = \\begin{cases} 2 \\lambda w_k & y_i \\cdot f(x) \\geq 1 \\\\ 2 \\lambda w_k - y_i \\cdot x_i & otherwise \\end{cases}$$\n",
     "\n",
-    "$$\n",
-    "\\frac{dJ_i}{db} =\n",
-    "  \\begin{cases}\n",
-    "       0 & y_i \\cdot f(x) \\geq 1 \\\\\n",
-    "       y_i & otherwise\n",
-    "  \\end{cases}\n",
-    "$$\n",
+    "$$\\frac{dJ_i}{db} = \\begin{cases} 0 & y_i \\cdot f(x) \\geq 1 \\\\ y_i & otherwise \\end{cases}$$\n",
     "\n",
     "#### Update Rule\n",
     "\n",
