added accuracy to svm

--- a/Machine Learning/Support Vector Machine (SVM).ipynb
+++ b/Machine Learning/Support Vector Machine (SVM).ipynb
@@ -95,6 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Accuracy:  1.0\n",
       "[0.58977016 0.17946483] -0.1520000000000001\n"
      ]
     },
@@ -117,13 +118,21 @@
     "from sklearn import datasets\n",
     "\n",
     "\n",
+    "def accuracy(y_true, y_pred):\n",
+    "    accuracy = np.sum(y_true == y_pred) / len(y_true)\n",
+    "    return accuracy\n",
+    "\n",
+    "\n",
     "X, y =  datasets.make_blobs(n_samples=50, n_features=2, centers=2, cluster_std=1.05, random_state=40)\n",
     "y = np.where(y == 0, -1, 1)\n",
     "\n",
     "clf = SVM()\n",
     "clf.fit(X, y)\n",
-    "#predictions = clf.predict(X)\n",
-    " \n",
+    "y_pred = clf.predict(X)\n",
+    "\n",
+    "acc = accuracy(y, y_pred)\n",
+    "print (\"Accuracy: \", acc)\n",
+    "\n",
     "print(clf.w, clf.b)\n",
     "\n",
     "def visualize_svm():\n",
