--- a/Blind 75/string/longest-substring-without-repeating-chars.ipynb
+++ b/Blind 75/string/longest-substring-without-repeating-chars.ipynb
@@ -101,8 +101,8 @@
    "source": [
     "### References\n",
     "\n",
-    "- [Leetcode - 3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/description/)\n",
-    "- [Neetcode - Longest Substring Without Repeating Characters - Leetcode 3 - Python](https://youtu.be/wiGpQwVHdE0?list=PLot-Xpze53ldVwtstag2TL4HQhAnC8ATf)"
+    "- [Leetcode](https://leetcode.com/problems/longest-substring-without-repeating-characters/description/)\n",
+    "- [Neetcode](https://youtu.be/wiGpQwVHdE0?list=PLot-Xpze53ldVwtstag2TL4HQhAnC8ATf)"
    ]
   }
  ],
