--- a/Blind 75/string/longest-repeating-character-replacement.ipynb
+++ b/Blind 75/string/longest-repeating-character-replacement.ipynb
@@ -40,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -74,6 +81,13 @@
     "\n",
     "        return res\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test"
    ]
   },
   {
