--- a/Blind 75/string/longest-substring-without-repeating-chars.ipynb
+++ b/Blind 75/string/longest-substring-without-repeating-chars.ipynb
@@ -46,6 +46,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -78,6 +85,13 @@
     "        \n",
     "        # return the max length\n",
     "        return result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test"
    ]
   },
   {
