--- a/Blind 75/string/longest-repeating-character-replacement.ipynb
+++ b/Blind 75/string/longest-repeating-character-replacement.ipynb
@@ -101,7 +101,7 @@
     "    (\"AABABBA\", 1, 4),\n",
     "]:\n",
     "    prediction = Solution().characterReplacement(s, k)\n",
-    "    assert prediction == result, f\"{result} expected for {s}, got {prediction}\""
+    "    assert prediction == result, f\"{result} expected for {s} and {k}, got {prediction}\""
    ]
   },
   {
