add github references

--- a/Blind 75/string/longest-repeating-character-replacement.ipynb
+++ b/Blind 75/string/longest-repeating-character-replacement.ipynb
@@ -111,7 +111,8 @@
     "### References\n",
     "\n",
     "- [Leetcode](https://leetcode.com/problems/longest-repeating-character-replacement/)\n",
-    "- [Neetcode](https://youtu.be/gqXU1UyA8pk?list=PLot-Xpze53ldVwtstag2TL4HQhAnC8ATf)"
+    "- [Neetcode - Youtube](https://youtu.be/gqXU1UyA8pk?list=PLot-Xpze53ldVwtstag2TL4HQhAnC8ATf)\n",
+    "- [Neetcode - Github](https://github.com/neetcode-gh/leetcode/blob/main/python/0424-longest-repeating-character-replacement.py)"
    ]
   }
  ],
