--- a/Blind 75/string/longest-substring-without-repeating-chars.ipynb
+++ b/Blind 75/string/longest-substring-without-repeating-chars.ipynb
@@ -116,7 +116,8 @@
     "### References\n",
     "\n",
     "- [Leetcode](https://leetcode.com/problems/longest-substring-without-repeating-characters/description/)\n",
-    "- [Neetcode](https://youtu.be/wiGpQwVHdE0?list=PLot-Xpze53ldVwtstag2TL4HQhAnC8ATf)"
+    "- [Neetcode - Youtube](https://youtu.be/wiGpQwVHdE0?list=PLot-Xpze53ldVwtstag2TL4HQhAnC8ATf)\n",
+    "- [Neetcode - Github](https://github.com/neetcode-gh/leetcode/blob/main/python/0003-longest-substring-without-repeating-characters.py)"
    ]
   }
  ],
