--- a/Blind 75/string/minimum-window-substring.ipynb
+++ b/Blind 75/string/minimum-window-substring.ipynb
@@ -76,7 +76,8 @@
     "        for char in t:\n",
     "            count_t[char] = count_t.get(char, 0) + 1\n",
     "        \n",
-    "        # Define 2 variables to store the number of characters we have in sliding window and no characters we need\n",
+    "        # Define 2 variables to store the number of characters we have in sliding window \n",
+    "        # and no characters we need\n",
     "        have, need = 0, len(count_t)\n",
     "\n",
     "        res, res_len = [-1, -1], float(\"inf\")\n",
@@ -86,12 +87,14 @@
     "            c = s[r]\n",
     "            window[c] = window.get(c, 0) + 1\n",
     "\n",
-    "            # If the number of character c in sliding window is the same as the number of character c in t, we have one more character we need\n",
+    "            # If the number of character c in sliding window is the same as the number of character c in t, \n",
+    "            # we have one more character we need\n",
     "            if c in count_t and window[c] == count_t[c]:\n",
     "                have += 1\n",
     "            \n",
     "            while have == need:\n",
-    "                # If the length of current sliding window is smaller than the length of previous sliding window, update the result\n",
+    "                # If the length of current sliding window is smaller than the length of previous sliding window, \n",
+    "                # update the result\n",
     "                if r - l + 1 < res_len:\n",
     "                    res = [l, r]\n",
     "                    res_len = r - l + 1\n",
@@ -100,7 +103,8 @@
     "                c = s[l]\n",
     "                window[c] -= 1\n",
     "\n",
-    "                # If the number of character c in sliding window is smaller than the number of character c in t, we have one less character we need\n",
+    "                # If the number of character c in sliding window is smaller than the number of character c in t, \n",
+    "                # we have one less character we need\n",
     "                if c in count_t and window[c] < count_t[c]:\n",
     "                    have -= 1\n",
     "                \n",
