update longest substring

--- a/Blind 75/string/longest-substring-without-repeating-chars.ipynb
+++ b/Blind 75/string/longest-substring-without-repeating-chars.ipynb
@@ -60,31 +60,25 @@
    "source": [
     "class Solution:\n",
     "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
-    "        \"\"\" This function uses a sliding window approach to find the longest substring without repeating characters.\n",
-    "        It has 2 pointers, l and r, to represent the left and right bound of the window.\n",
-    "        It also uses a set to store the characters in the current window.\n",
-    "        It has a time complexity of O(n) and a space complexity of O(n).\n",
     "        \"\"\"\n",
-    "        # create a set to store the characters in the current window, so O(n) space complexity\n",
+    "        Keep a set for the substring characters, as it's without repeating characters\n",
+    "        Keep a variable for the current max length\n",
+    "        iterate list with a right pointer\n",
+    "        if s[r] is in the s[l:r] (or in char_set) at any time, increment left pointer by 1 until s[r] not in s[l:r] (or in char_set), and remove s[l] from char_set\n",
+    "        \"\"\"\n",
     "        char_set = set()\n",
-    "        # create two pointers, l and r, to represent the left and right bound of the window\n",
+    "        max_len = 0\n",
     "        l = 0\n",
-    "        # create a variable to store the max length\n",
-    "        result = 0\n",
-    "        # iterate through the string, so O(n) time complexity\n",
+    "\n",
     "        for r in range(len(s)):\n",
-    "            # if the character at the right bound is in the set, \n",
-    "            # remove the character at the left bound from the set and increment the left bound\n",
-    "            while s[r] in char_set:\n",
+    "            while s[r] in s[l:r]:\n",
     "                char_set.remove(s[l])\n",
     "                l += 1\n",
-    "            # add the character at the right bound to the set\n",
+    "\n",
     "            char_set.add(s[r])\n",
-    "            # update the max length\n",
-    "            result = max(result, r - l + 1)\n",
+    "            max_len = max(max_len, r - l + 1)\n",
     "        \n",
-    "        # return the max length\n",
-    "        return result\n"
+    "        return max_len\n"
    ]
   },
   {
