--- a/Blind 75/string/longest-repeating-character-replacement.ipynb
+++ b/Blind 75/string/longest-repeating-character-replacement.ipynb
@@ -54,33 +54,32 @@
    "source": [
     "class Solution:\n",
     "    def characterReplacement(self, s: str, k: int) -> int:\n",
-    "        \"\"\" This function uses a sliding window to solve the problem.\n",
-    "        The window is defined by two pointers, l and r, which are the left and right boundaries of the window.\n",
-    "        The window is defined by the substring s[l:r+1].\n",
-    "        The window is valid if the number of characters that are not the most frequent character is less than or equal to k.\n",
-    "        It has a time complexity of O(n) and a space complexity of O(n)\n",
     "        \"\"\"\n",
-    "\n",
-    "        # count is a dictionary that maps a character to the number of times it appears in the window\n",
-    "        count = {}\n",
+    "        We define 2 pointers, left and right; l, r\n",
+    "        We define a count dictionay; count_dict; to keep the number of chars in s[l:r]\n",
+    "        We define a variable to keep the count of the most repeated character in the dict; max_freq\n",
+    "        Iterate r through the characters of s\n",
+    "        At each iteration, we will possibly update max_freq\n",
+    "        \"\"\"\n",
+    "        count_dict = {}\n",
     "        res = 0\n",
-    "\n",
     "        l = 0\n",
     "        max_freq = 0\n",
     "        for r in range(len(s)):\n",
-    "            # update the count of the character at the right boundary of the window\n",
-    "            count[s[r]] = count.get(s[r], 0) + 1\n",
-    "            max_freq = max(max_freq, count[s[r]])\n",
+    "            count_dict[s[r]] = count_dict.get(s[r], 0) + 1\n",
+    "            max_freq = max(max_freq, count_dict[s[r]])\n",
     "\n",
-    "            # if the window is not valid, move the left boundary of the window to the right\n",
+    "            # Now check if the number of characters except the most repeating one exceeds k\n",
     "            while r - l + 1 - max_freq > k:\n",
-    "                count[s[l]] -= 1\n",
+    "                # And update count_dict\n",
+    "                count_dict[s[l]] -= 1\n",
+    "                # Then we need to increment l\n",
     "                l += 1\n",
     "\n",
     "            res = max(res, r - l + 1)\n",
-    "\n",
+    "        \n",
     "        return res\n",
-    "        "
+    "            "
    ]
   },
   {
