modify minimum window substring

--- a/Blind 75/string/minimum-window-substring.ipynb
+++ b/Blind 75/string/minimum-window-substring.ipynb
@@ -60,57 +60,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
     "    def minWindow(self, s: str, t: str) -> str:\n",
+    "        \"\"\"\n",
+    "        We define 2 pointers; l and r\n",
+    "        We define a dictionary for the counts of characters in s[l:r]; have_dict\n",
+    "        We define a dictonary for the counts of characters in t; need_dict\n",
+    "        We define 2 variables for the count of characters that we have and need; have_count, need_count\n",
+    "        We define a result variable that will keep [l, r] at each step, as we need to return the substring; res\n",
+    "        We define a variable to keep the count of charcters in s[l:r]; res_len\n",
+    "\n",
+    "        1. Create need_dict using t\n",
+    "        2. Iterate r through s:\n",
+    "            i. Update have_dict\n",
+    "            ii. Check if current character is in need_dict & counts are the same -> increment have_count\n",
+    "            iii. While have_count == need_count\n",
+    "                a. Update res if it has smaller length\n",
+    "                b. Remove the character at the left pointer from sliding window\n",
+    "                c. If the number of chars c in have_dict < number of chars c in need_dict, decrement have_count\n",
+    "                d. Increment left pointer\n",
+    "        \"\"\"\n",
+    "        \n",
     "        if t == \"\": return \"\"\n",
     "\n",
-    "        # Define a dictionary to store the number of each character in sliding window\n",
-    "        # and a dictionar to store the number of each character in t\n",
-    "        window, count_t = {}, {}\n",
-    "\n",
-    "        # Initialize the count_t dictionary\n",
-    "        for char in t:\n",
-    "            count_t[char] = count_t.get(char, 0) + 1\n",
-    "        \n",
-    "        # Define 2 variables to store the number of characters we have in sliding window \n",
-    "        # and no characters we need\n",
-    "        have, need = 0, len(count_t)\n",
-    "\n",
-    "        res, res_len = [-1, -1], float(\"inf\")\n",
     "        l = 0\n",
+    "        have_dict, need_dict = {}, {}\n",
+    "        for i in t:\n",
+    "            need_dict[i] = need_dict.get(i, 0) + 1\n",
+    "        have_count, need_count = 0, len(need_dict)\n",
+    "        res = [-1, -1]\n",
+    "        res_len = float(\"inf\")\n",
     "\n",
     "        for r in range(len(s)):\n",
-    "            c = s[r]\n",
-    "            window[c] = window.get(c, 0) + 1\n",
+    "            have_dict[s[r]] = have_dict.get(s[r], 0) + 1\n",
     "\n",
-    "            # If the number of character c in sliding window is the same as the number of character c in t, \n",
-    "            # we have one more character we need\n",
-    "            if c in count_t and window[c] == count_t[c]:\n",
-    "                have += 1\n",
+    "            if s[r] in need_dict and have_dict[s[r]] == need_dict[s[r]]:\n",
+    "                have_count += 1\n",
     "            \n",
-    "            while have == need:\n",
-    "                # If the length of current sliding window is smaller than the length of previous sliding window, \n",
-    "                # update the result\n",
-    "                if r - l + 1 < res_len:\n",
+    "            while have_count == need_count:\n",
+    "                if res_len > r - l + 1:\n",
     "                    res = [l, r]\n",
     "                    res_len = r - l + 1\n",
     "                \n",
-    "                # Move the left pointer to right by 1\n",
-    "                c = s[l]\n",
-    "                window[c] -= 1\n",
+    "                have_dict[s[l]] -= 1\n",
     "\n",
-    "                # If the number of character c in sliding window is smaller than the number of character c in t, \n",
-    "                # we have one less character we need\n",
-    "                if c in count_t and window[c] < count_t[c]:\n",
-    "                    have -= 1\n",
+    "                if s[l] in need_dict and have_dict[s[l]] < need_dict[s[l]]:\n",
+    "                    have_count -= 1\n",
     "                \n",
     "                l += 1\n",
-    "                \n",
-    "        return s[res[0]:res[1]+1] if res[0] != -1 else \"\"\n"
+    "        \n",
+    "        return s[res[0]: res[1]+1] if res[0] != -1 else \"\""
    ]
   },
   {
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
