add TreeNode to another file

--- a/Blind 75/tree/binary-tree-maximum-path-sum.ipynb
+++ b/Blind 75/tree/binary-tree-maximum-path-sum.ipynb
@@ -42,22 +42,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "938f1a87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Optional\n",
-    "\n",
-    "class TreeNode:\n",
-    "    def __init__(self, val=0, left=None, right=None):\n",
-    "        self.val = val\n",
-    "        self.left = left\n",
-    "        self.right = right"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4dbdb20a",
    "metadata": {},
@@ -67,11 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "6adee9d2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tree import TreeNode\n",
+    "\n",
     "class Solution:\n",
     "    def maxPathSum(self, root: TreeNode) -> int:\n",
     "        res = [root.val]\n",
