--- a/Blind 75/tree/invert-binary-tree.ipynb
+++ b/Blind 75/tree/invert-binary-tree.ipynb
@@ -49,36 +49,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "810fbcdf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TreeNode:\n",
-    "    def __init__(self, val=0, left=None, right=None):\n",
-    "        self.val = val\n",
-    "        self.left = left\n",
-    "        self.right = right\n",
-    "    \n",
-    "    def __str__(self) -> str:\n",
-    "        \"\"\"Prints the tree as a list joined by space, BFS order\"\"\"\n",
-    "        if self is None:\n",
-    "            return \"\"\n",
-    "        queue = [self]\n",
-    "        result = []\n",
-    "        while queue:\n",
-    "            node = queue.pop(0)\n",
-    "            if node is None:\n",
-    "                result.append(\"null\")\n",
-    "            else:\n",
-    "                result.append(str(node.val))\n",
-    "                queue.append(node.left)\n",
-    "                queue.append(node.right)\n",
-    "        return \" \".join(result)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "26742898",
    "metadata": {},
@@ -94,6 +64,7 @@
    "outputs": [],
    "source": [
     "from typing import Optional\n",
+    "from tree import TreeNode\n",
     "\n",
     "class Solution:\n",
     "    def invertTree(self, root: Optional[TreeNode]) -> Optional[TreeNode]:\n",
