--- a/Blind 75/tree/maximum-depth-of-binary-tree.ipynb
+++ b/Blind 75/tree/maximum-depth-of-binary-tree.ipynb
@@ -37,19 +37,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TreeNode:\n",
-    "    def __init__(self, val=0, left=None, right=None):\n",
-    "        self.val = val\n",
-    "        self.left = left\n",
-    "        self.right = right"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,6 +50,7 @@
    "outputs": [],
    "source": [
     "from collections import deque\n",
+    "from tree import TreeNode\n",
     "\n",
     "class Solution:\n",
     "    def maxDepth(self, root: TreeNode) -> int:\n",
