--- a/Blind 75/tree/same-tree.ipynb
+++ b/Blind 75/tree/same-tree.ipynb
@@ -44,19 +44,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TreeNode:\n",
-    "    def __init__(self, val=0, left=None, right=None):\n",
-    "        self.val = val\n",
-    "        self.left = left\n",
-    "        self.right = right"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,6 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tree import TreeNode\n",
+    "from typing import Optional\n",
+    "\n",
     "class Solution:\n",
     "    def isSameTree(self, p: Optional[TreeNode], q: Optional[TreeNode]) -> bool:\n",
     "        if not p and not q:\n",
