--- a/Blind 75/tree/binary-tree-maximum-path-sum.ipynb
+++ b/Blind 75/tree/binary-tree-maximum-path-sum.ipynb
@@ -21,6 +21,9 @@
     "\n",
     "**Example 1:**\n",
     "\n",
+    "![\"\"](/assets/Blind%2075/tree/example-1.png)\n",
+    "\n",
+    "\n",
     "```\n",
     "Input: root = [1,2,3]\n",
     "Output: 6\n",
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "6adee9d2",
    "metadata": {},
    "outputs": [],
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "15210f9b",
    "metadata": {},
    "outputs": [],
