--- a/Blind 75/tree/binary-tree-maximum-path-sum.ipynb
+++ b/Blind 75/tree/binary-tree-maximum-path-sum.ipynb
@@ -21,8 +21,7 @@
     "\n",
     "**Example 1:**\n",
     "\n",
-    "![\"\"](/assets/Blind%2075/tree/example-1.png)\n",
-    "\n",
+    "![\"example-1\"](../../assets/Blind%2075/tree/example-1.png)\n",
     "\n",
     "```\n",
     "Input: root = [1,2,3]\n",
@@ -31,6 +30,8 @@
     "```\n",
     "\n",
     "**Example 2:**\n",
+    "\n",
+    "![\"example-2\"](../../assets/Blind%2075/tree/example-2.png)\n",
     "\n",
     "```\n",
     "Input: root = [-10,9,20,null,null,15,7]\n",
