fix binary tree max path sum

--- a/Blind 75/tree/binary-tree-maximum-path-sum.ipynb
+++ b/Blind 75/tree/binary-tree-maximum-path-sum.ipynb
@@ -64,24 +64,34 @@
     "\n",
     "class Solution:\n",
     "    def maxPathSum(self, root: TreeNode) -> int:\n",
-    "        res = [root.val]\n",
+    "        res = [root.val] # res[0] is used to store the max path sum.\n",
+    "        # It's a list because we want to pass by reference.\n",
+    "        # If we pass by value, we need to use nonlocal keyword inside dfs function.\n",
     "\n",
     "        # return max path sum without split\n",
     "        def dfs(root):\n",
     "            if not root:\n",
     "                return 0\n",
     "\n",
-    "            leftMax = dfs(root.left)\n",
-    "            rightMax = dfs(root.right)\n",
-    "            leftMax = max(leftMax, 0)\n",
-    "            rightMax = max(rightMax, 0)\n",
+    "            leftMax = dfs(root.left) # max path sum of root.left.\n",
+    "            rightMax = dfs(root.right) # max path sum of root.right.\n",
+    "            leftMax = max(leftMax, 0) # make sure that leftMax is positive.\n",
+    "            rightMax = max(rightMax, 0) # make sure that rightMax is positive.\n",
     "\n",
-    "            # compute max path sum WITH split\n",
-    "            res[0] = max(res[0], root.val + leftMax + rightMax)\n",
-    "            return root.val + max(leftMax, rightMax)\n",
+    "            res[0] = max(res[0], root.val + leftMax + rightMax) # compute max path sum WITH split\n",
+    "            return root.val + max(leftMax, rightMax) # return max path sum WITHOUT split, this is to make sure that the path is continuous.\n",
     "\n",
     "        dfs(root)\n",
     "        return res[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4777de60",
+   "metadata": {},
+   "source": [
+    "- We compute the max path sum with split and return the max path sum without split. Because we need to make sure that the path is continuous.\n",
+    "- Detailed explanation [here](https://leetcode.com/problems/binary-tree-maximum-path-sum/discuss/603423/Python-Recursion-stack-thinking-process-diagram)"
    ]
   },
   {
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "15210f9b",
    "metadata": {},
    "outputs": [],
